# rag-document-chatbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  chain.py  cli.py  ingest.py  retriever.py
data/: document_info.json
frontend/: streamlit_app.py
tests/: test_chain.py
