[project]
name = "rag-document-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx2>=2.3.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]

[project.scripts]
rag-chat = "app.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: requires OPENAI_API_KEY and a populated ChromaDB",
]
